--- a/lib/l10n/intl_id.arb
+++ b/lib/l10n/intl_id.arb
@@ -25,5 +25,10 @@
     "@youHaveClicked": {
       "type": "text",
       "placeholders": {}
-    }
+  },
+  "home": "Rumah",
+  "@home": {
+     "type": "text",
+     "placeholders": {}
+  }
 }
